--- a/index.html
+++ b/index.html
@@ -275,9 +275,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h1 class="header-h">Book Your table</h1>
-          <p class="header-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
-            <br>nibh euismod tincidunt ut laoreet dolore magna aliquam. </p>
+          <h1 class="header-h">Bize Ulaşın</h1>
+          <p class="header-p">Sizlere daha iyi hizmet verebilmemiz için her türlü görüş, öneri,<br> şikayet veya isteklerinizi bize gönderebilirisinz.</p>
         </div>
       </div>
       <div class="row msg-row">
@@ -287,8 +286,8 @@
               <div class="contact-phone bg-1 text-center"><span class="phone-in-talk fa fa-phone"></span></div>
             </div>
             <div class="media-body">
-              <h4 class="dark-blue regular">Phone Numbers</h4>
-              <p class="light-blue regular alt-p">+440 875369208 - <span class="contacts-sp">Phone Booking</span></p>
+              <h4 class="dark-blue regular">Telefon Numarası</h4>
+              <p class="light-blue regular alt-p">+90 224 452 87 88 </p>
             </div>
           </div>
           <div class="media-2">
@@ -296,68 +295,67 @@
               <div class="contact-email bg-14 text-center"><span class="hour-icon fa fa-clock-o"></span></div>
             </div>
             <div class="media-body">
-              <h4 class="dark-blue regular">Opening Hours</h4>
-              <p class="light-blue regular alt-p"> Monday to Friday 09.00 - 24:00</p>
-              <p class="light-blue regular alt-p">
-                Friday and Sunday 08:00 - 03.00
-              </p>
+              <h4 class="dark-blue regular">Mesai Saatleri</h4>
+              <p class="light-blue regular alt-p"> Haftanın Her Günü</p>
+              <p class="light-blue regular alt-p"> Açılış 10:30 </p>
+              <p class="light-blue regular alt-p"> Kapanış 22:30 </p>
             </div>
           </div>
         </div>
         <div class="col-md-8 col-sm-8">
           <form action="" method="post" role="form" class="contactForm">
-            <div id="sendmessage">Your booking request has been sent. Thank you!</div>
-            <div id="errormessage"></div>
+
+            <!-- Name Start -->
             <div class="col-md-6 col-sm-6 contact-form pad-form">
               <div class="form-group label-floating is-empty">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                <input type="text" name="name" class="form-control" id="name" placeholder="Adınız" data-rule="minlen:3" data-msg="Lütfen Minimum 3 Karakter Giriniz." />
                 <div class="validation"></div>
               </div>
 
             </div>
-            <div class="col-md-6 col-sm-6 contact-form">
-              <div class="form-group">
-                <input type="date" class="form-control label-floating is-empty" name="date" id="date" placeholder="Date" data-rule="required" data-msg="This field is required" />
-                <div class="validation"></div>
-              </div>
-            </div>
+            <!-- Name Finish -->
+            <!-- Email Start -->
             <div class="col-md-6 col-sm-6 contact-form pad-form">
               <div class="form-group">
-                <input type="email" class="form-control label-floating is-empty" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                <input type="email" class="form-control label-floating is-empty" name="email" id="email" placeholder="Email" data-rule="email" data-msg="Lütfen Bir Email Giriniz" />
                 <div class="validation"></div>
               </div>
             </div>
+            <!-- Email Finish -->
+            <!-- Phone Start -->
             <div class="col-md-6 col-sm-6 contact-form">
               <div class="form-group">
-                <input type="time" class="form-control label-floating is-empty" name="time" id="time" placeholder="Time" data-rule="required" data-msg="This field is required" />
+                <input type="text"  class="form-control bf-phone" name="phone" id="phone" placeholder="Telefon" data-rule="required" data-msg="Bu Alan Boş Bırakılamaz" />
                 <div class="validation"></div>
               </div>
             </div>
-            <div class="col-md-6 col-sm-6 contact-form">
-              <div class="form-group">
-                <input type="text" class="form-control label-floating is-empty" name="phone" id="phone" placeholder="Phone" data-rule="required" data-msg="This field is required" />
-                <div class="validation"></div>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6 contact-form">
-              <div class="form-group">
-                <input type="text" class="form-control label-floating is-empty" name="people" id="people" placeholder="People" data-rule="required" data-msg="This field is required" />
-                <div class="validation"></div>
-              </div>
-            </div>
+            <!-- Phone Finish -->
+            <!-- Message Start -->
             <div class="col-md-12 contact-form">
               <div class="form-group label-floating is-empty">
-                <textarea class="form-control" name="message" rows="5" rows="3" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                <textarea class="form-control" name="message" rows="5" rows="3" data-rule="required" data-msg="Lütfen Bir Şeyler Girin." placeholder="Mesajınız"></textarea>
                 <div class="validation"></div>
               </div>
 
             </div>
-            <div class="col-md-12 btnpad">
-              <div class="contacts-btn-pad">
-                <button class="contacts-btn">Book Table</button>
-              </div>
-            </div>
+            <!-- Message Finish -->
+
           </form>
+             <div class="col-md-12 btnpad">
+	           	<div>
+	            	<p id="demo">
+	            			
+	            	</p>
+	            </div>
+	            <div class="contacts-btn">
+
+	                	<a  class="btn btn-primary btn-lg active" role="button" 
+	                		onclick="myFunction()" aria-pressed="true" style="margin-left: 60px;background-color: orange;text-align: center;color: black;">
+	                		Gönder
+	                	</a>
+
+              	</div>
+            </div>
         </div>
       </div>
     </div>
@@ -370,14 +368,24 @@
         <div class="col-md-offset-3 col-md-6 text-center">
           <div class="widget">
             <h4 class="widget-title">Kofte Food</h4>
-            <address>324 Ellte Road<br>Delhi, DL 110013</address>
+            <address>Konak Mahallesi Yıldırım Caddesi No:1/J Origami Flat Office <br> Nilüfer / Bursa</address>
             <div class="social-list">
-              <a href="https://www.instagram.com/koftefoodtr/">
-              	<i class="fa fa-instagram" aria-hidden="true"></i></a>
-              <a href="https://www.facebook.com/KÖFTE-FOOD-108604480769588/">
-              	<i class="fa fa-facebook" aria-hidden="true"></i></a>
+            	<a href="https://www.gmail.com">
+            		<i class="fa fa-envelope-o" aria-hidden="true"></i></a>           	 	       
+              	<a href="https://www.instagram.com/koftefoodtr/">
+              		<i class="fa fa-instagram" aria-hidden="true"></i></a>
+            	<a href="https://www.facebook.com/KÖFTE-FOOD-108604480769588/">
+              		<i class="fa fa-facebook" aria-hidden="true"></i></a>
 
             </div>
+			
+			<p class="copyright clear-float">
+               Kofte Food 
+               <br>
+               © 2020 
+               <br>
+               Tüm Hakları Saklıdır.
+            </p>            
 
           </div>
         </div>
@@ -395,3 +403,9 @@
 </body>
 
 </html>
+<script>
+function myFunction() {
+  document.getElementById("demo").innerHTML = "Üzgünüm Şu Anda Geri Bildirim de Sorun Yaşıyoruz.<br />  Görüşlerinizi Bizimle İnstagram Adresinden İletebilirsiniz...";
+}
+
+</script>
