--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 			    <!-- Wrapper for slides -->
 			    <div class="carousel-inner">
-			      <div class="item active">
+			      <div class="item active">			
 			        <img src="img/80.jpg"  style="width:100%;">
 			      </div>
 
@@ -123,8 +123,7 @@
       <div class="row">
         <div class="col-md-12 text-center marb-35">
           <h1 class="header-h">Menu Listesi</h1>
-          <p class="header-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy
-            <br>nibh euismod tincidunt ut laoreet dolore magna aliquam. </p>
+
         </div>
 
         <div class="col-md-12  text-center" id="menu-flters">
@@ -141,7 +140,7 @@
           <div class="menuF menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="" data-meal-img="img/12.jpg">Ekmek İçi Kofte Menu</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 203px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">14.00 ₺</span>
             </span>
             <span class="menu-subtitle">3 Farklı Sos Çeşidi ile Köfte ekmek + Dilediğiniz Tatlı ve Seçeceğiniz Bir İçecek İle Servis Edilir.</span>
@@ -151,7 +150,7 @@
           <div class="dessert menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="" data-meal-img="assets/img/restaurant/rib.jpg">Çikolatalı Muhallebi</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 198px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">4.00 ₺</span>
             </span>
             <span class="menu-subtitle">Tatlımız Ustamız Tarafından Özenle Yapılır. Hazır Değildir.</span>
@@ -161,7 +160,7 @@
           <div class="menuF menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="" data-meal-img="assets/img/restaurant/rib.jpg">Adana Dürüm menu</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 176px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">16.00 ₺</span>
             </span>
             <span class="menu-subtitle">3 Farklı Sos Çeşidi ile Tırnaklı Pidede Adana Kebabı + Dilediğiniz Tatlı ve Seçeceğiniz Bir İçecek İle Servis Edilir.</span>
@@ -171,7 +170,7 @@
           <div class="dessert menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="" data-meal-img="assets/img/restaurant/rib.jpg">İrmik Tatlısı</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 110px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">4.00 ₺</span>
             </span>
             <span class="menu-subtitle">Tatlımız Ustamız Tarafından Özenle Yapılır. Hazır Değildir.</span>
@@ -191,7 +190,7 @@
           <div class="dessert menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="" data-meal-img="assets/img/restaurant/rib.jpg">Sütlü Kadayıf</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 125px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">4.00 ₺</span>
             </span>
             <span class="menu-subtitle">Tatlımız Ustamız Tarafından Özenle Yapılır. Hazır Değildir.</span>
@@ -200,8 +199,8 @@
           <!-- Item 7 Start -->
           <div class="dessert menu-restaurant">
             <span class="clearfix">
-              <a class="menu-title" href="" data-meal-img="assets/img/restaurant/rib.jpg">Oman Meyveli Muhallebi</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <a class="menu-title" href="" data-meal-img="assets/img/restaurant/rib.jpg">Orman Meyveli Muhallebi</a>
+              <span style="left: 245px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">4.00 ₺</span>
             </span>
             <span class="menu-subtitle">Tatlımız Ustamız Tarafından Özenle Yapılır. Hazır Değildir.</span>
@@ -211,7 +210,7 @@
           <div class="dessert menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Puding</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 60px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">4.00 ₺</span>
             </span>
             <span class="menu-subtitle">Tatlımız Ustamız Tarafından Özenle Yapılır. Hazır Değildir.</span>
@@ -221,7 +220,7 @@
           <div class="drinks menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Coca Cola </a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 100px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">3.50 ₺</span>
             </span>
             <span class="menu-subtitle"></span>
@@ -231,7 +230,7 @@
           <div class="drinks menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Fanta</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 50px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">3.50 ₺</span>
             </span>
             <span class="menu-subtitle"></span>
@@ -241,7 +240,7 @@
           <div class="drinks menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Ayran</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left:50px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">3.50 ₺</span>
             </span>
             <span class="menu-subtitle"></span>
@@ -251,7 +250,7 @@
           <div class="drinks menu-restaurant">
             <span class="clearfix">
               <a class="menu-title" href="#" data-meal-img="assets/img/restaurant/rib.jpg">Su</a>
-              <span style="left: 166px; right: 44px;" class="menu-line"></span>
+              <span style="left: 15px; right: 44px;" class="menu-line"></span>
               <span class="menu-price">1.50 ₺</span>
             </span>
             <span class="menu-subtitle"></span>
@@ -370,11 +369,11 @@
             <h4 class="widget-title">Kofte Food</h4>
             <address>Konak Mahallesi Yıldırım Caddesi No:1/J Origami Flat Office <br> Nilüfer / Bursa</address>
             <div class="social-list">
-            	<a href="https://www.gmail.com">
+            	<a target="_blank" href="https://www.gmail.com">
             		<i class="fa fa-envelope-o" aria-hidden="true"></i></a>           	 	       
-              	<a href="https://www.instagram.com/koftefoodtr/">
+              	<a target="_blank" href="https://www.instagram.com/koftefoodtr/">
               		<i class="fa fa-instagram" aria-hidden="true"></i></a>
-            	<a href="https://www.facebook.com/KÖFTE-FOOD-108604480769588/">
+            	<a target="_blank" href="https://www.facebook.com/KÖFTE-FOOD-108604480769588/">
               		<i class="fa fa-facebook" aria-hidden="true"></i></a>
 
             </div>
